--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -97,6 +97,8 @@ body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
+    max-width: 100vw;
+    overflow-x: hidden;
 }
 
 .carousel-item img {
