--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -34,6 +34,9 @@ nav img {
     text-decoration:wavy underline;
 }
 
+.navbar-brand:hover {
+    color: rgb(63, 1, 63);
+}
 .nav-item {
     font-family: 'Cookie', cursive;
     font-size: 30px;
